k8s/kc-proxy.yaml
apiVersion: apps/v1  
kind: Deployment  
metadata:  
  name: kc-proxy
  labels:
    app: kc-proxy
spec:  
  replicas: 1
  selector:
    matchLabels:
      app: kc-proxy
  template:
    metadata:
      labels:
        app: kc-proxy
    spec:
      containers:
      - name: app-reverse-proxy
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: app-rp-config-cm-vol
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
      volumes:
      - configMap:
          name: app-rp-config-cm
          items:
          - key: nginx.conf
            path: nginx.conf
        name: app-rp-config-cm-vol
---
apiVersion: v1
kind: Service
metadata:
  name: kc-proxy
spec:
  selector:
    app: kc-proxy
  type: LoadBalancer
  ports:
  - port: 8083
    targetPort: 80
