k8s/apicurio.yaml
# Postgres
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: multitenant-sr-db
spec:
  serviceName: multitenant-sr-db-service
  selector:
    matchLabels:
      app: multitenant-sr-db
  replicas: 1
  template:
    metadata:
      labels:
        app: multitenant-sr-db
    spec:
      containers:
        - name: postgresql-db
          image: postgres:latest
---
apiVersion: v1
kind: Service
metadata:
  name: multitenant-sr-db
spec:
  selector:
    app: multitenant-sr-db
  type: LoadBalancer
  ports:
  - port: 5432
    targetPort: 5432
---
# Tenant manager
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tenant-manager
  labels:
    app: tenant-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tenant-manager
  template:
    metadata:
      labels:
        app: tenant-manager
    spec:
      containers:
      - name: tenant-manager
        image: quay.io/apicurio/apicurio-registry-tenant-manager-api:latest-snapshot
        ports:
        - name: http
          containerPort: 8585
---
apiVersion: v1
kind: Service
metadata:
  name: tenant-manager
spec:
  selector:
    app: tenant-manager
  type: LoadBalancer
  ports:
  - port: 8585
    targetPort: 8585
---
# Fleet manager
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleet-manager
  labels:
    app: fleet-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fleet-manager
  template:
    metadata:
      labels:
        app: fleet-manager
    spec:
      volumes:
      - name: fleet-manager-config
        secret:
          secretName: fleet-manager-config
      containers:
      - name: fleet-manager
        image: 'quay.io/apicurio/apicurio-registry-fleet-manager:latest-snapshot'
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: fleet-manager-config
          readOnly: true
          mountPath: "/mnt/config"
---
apiVersion: v1
kind: Service
metadata:
  name: fleet-manager
spec:
  selector:
    app: fleet-manager
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8081
---
# Registry
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-app
  labels:
    app: registry-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-app
  template:
    metadata:
      labels:
        app: registry-app
    spec:
      containers:
      - name: registry-app
        image: 'quay.io/apicurio/apicurio-registry-sql:latest-snapshot'
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: registry-app
spec:
  selector:
    app: registry-app
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-app
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  # TODO: test and fix this properly
  # POSSIBLY: localhost on Mac $(minikube ip) on Linux
  # TODO a script to configure everything
  - host: registry-app.192.168.49.2.nip.io
    http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: registry-app
            port:
              number: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apicurio-registry-mt-ui
  name: apicurio-registry-mt-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apicurio-registry-mt-ui
  template:
    metadata:
      labels:
        app: apicurio-registry-mt-ui
    spec:
      containers:
        - name: apicurio-registry-mt-ui
          image: quay.io/apicurio/apicurio-registry-mt-ui:hackathon
          ports:
            - containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: apicurio-registry-mt-ui
spec:
  selector:
    app: apicurio-registry-mt-ui
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apicurio-registry-mt-ui
  # TODO: check if needed
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  # TODO: test and fix this properly
  # POSSIBLY: localhost on Mac $(minikube ip) on Linux
  # TODO a script to configure everything
  - host: registry.192.168.49.2.nip.io
    http:
      paths:
      - path: /ui
        pathType: Prefix
        backend:
          service:
            name: apicurio-registry-mt-ui
            port:
              number: 80
